kube-deploy/manifests/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${KUBE_NAMESPACE}
  labels:
    app: ${KUBE_NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: ${APP_HOSTNAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${KUBE_NAMESPACE}
            port:
              number: ${CONTAINER_PORT}
